--- a/website/templates/diagnostics_form.html
+++ b/website/templates/diagnostics_form.html
@@ -20,7 +20,7 @@
                     <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url "diagnostics" %}">Faça seu diagnostico</a></li>
                 </ul>
-                <a class="btn btn-warning ms-3" href="{% url "home_system" %}">Acessar sistema</a>
+                <a class="btn btn-warning ms-3" href="{% url "home_admin" %}">Acessar sistema</a>
             </div>
         </div>
     </nav>
